# marty-authenticator

./: .dockerignore  .env.example  .env.firebase.example  .env.test  .firebaserc  .gitignore  .gitleaks.toml  .metadata  .mlc-config.json  .pre-commit-config.yaml  CHANGELOG.md  DEEP_LINKING.md  DEMO_README.md  LICENSE.txt  Makefile  PRIVACY.md  PROJECT_README.md  README.md  README_DEMO_MODES.md  SPRUCEKIT_SDK_INTEGRATION.md  VERTICAL_STACKED_CARDS_README.md  analysis_options.yaml  build.yaml  decode-credential-offer.js  dependency-health.yml  flutter_launcher_icons-netknights.yaml  flutter_rust_bridge.yaml  marty-authenticator.code-workspace  package-lock.json  package.json  pubspec.yaml  pyproject.toml  reproduce_issue.dart  test-authenticator-oid4vc.js  test-credential-qr.js  test-flutter-credentials.js  test-qr-credential-flow.js  test-simple-credential-flow.js  test_credential_endpoint.dart  test_deep_link_widget.dart
.github/: dependabot.yml
.github/workflows/: bootstrap-dart-fixes.yml  bootstrap-dart-format.yml  bootstrap-flutter-lock.yml  bootstrap-flutter-lockfile.yml  bootstrap-flutter-upgrade.yml  code-quality.yml  flutter_build.yml  flutter_test.yml  license-compliance.yml  organization-quality.yml  release.yml
.precommit/: .markdownlint.yml  .pre-commit-config-comprehensive.yaml  .pre-commit-config-enhanced.yaml  .pre-commit-config-full.yaml  .pre-commit-config-simple.yaml  .secrets.baseline  .vulture_whitelist  README.md  switch-config.sh
android/: ANDROID_REFACTOR.md  SpruceID_Integration_Progress.md  SpruceID_Integration_Summary.md  build.gradle  settings.gradle
android/app/: build.gradle  proguard-rules.pro
docker/: .dockerignore  .env.example  DEVELOPMENT_NETWORK.md  Dockerfile.firebase  Dockerfile.flutter  Dockerfile.flutter.dev  Dockerfile.flutter.web.test  Dockerfile.privacyidea  FIREBASE_CONFIG.md  README.md  docker-compose.yml  entrypoint.sh  flutter_launcher_icons-netknights_debug.yaml  init-privacyidea.sh  pi.cfg  setup-firebase-project.sh  test-setup.sh
docker/plugins/: EXTENSION_POINTS.md  development-README.md
docker/rust-bindings/: .gitignore  BUILD_TEST_RESULTS.md  Cargo.toml  README.md  build-linux.sh  build-uv.sh  build.sh  pyproject.toml  test_bindings.py
docker/rust-bindings/src/: did.rs  lib.rs  mdoc.rs  oid4vci.rs
docs/: DEEP_LINKING_QUICK_REFERENCE.md  FIREBASE_SETUP.md  OID4VC_USE_CASES.md  grouped-credentials-feature.md  stacked-credentials-demo-data.md
example/lib/: main_demo_all_mdocs.dart  main_demo_mdl.dart  main_demo_mdl_passport.dart  main_demo_mdocs_states.dart  main_qr_scanner_integration_demo.dart  qr_scanner_integration_demo.dart  sdk_integration_demo.dart
integration_test/: add_tokens_test.dart  copy_to_clipboard_test.dart  deep_link_no_firebase_test.dart  marty_push_registration_test.dart  real_credential_flow_test.dart  real_presentation_flow_test.dart  rename_and_delete_test.dart  two_step_rollout_test.dart  views_test.dart
ios/: Podfile  SpruceID_iOS_Integration_Progress.md  SpruceID_iOS_Refactoring_Analysis.md
ios/Flutter/: AppFrameworkInfo.plist
ios/Runner/: AppDelegate.swift  GoogleService-Info.plist  Info.plist  bridge_generated.h
ios/Runner.xcodeproj/: project.pbxproj  project.pbxproj.backup
lib/: main.dart  main_demo_all_mdocs.dart  main_demo_mdl.dart  main_demo_mdl_passport.dart  main_demo_mdocs_states.dart  main_document.dart  oid4vc_client.dart  spruce_client.dart
lib/controllers/: scroll_fade_controller.dart
lib/examples/: sdk_integration_demo.dart
lib/firebase_options/: default_firebase_options.dart  default_firebase_options.dart.backup
lib/fixtures/: qr_code_fixtures.dart  spruce_credentials_fixtures.dart
lib/interfaces/: spruce_interfaces.dart  spruce_interfaces_extended.dart
lib/l10n/: app_de.arb  app_en.arb
lib/mains/: demo_base.dart  main_customizer.dart  main_marty.dart  main_netknights.dart  main_netknights.dart.backup  main_web_test.dart  main_with_mocks.dart  main_with_mocks.dart.backup
lib/mmf/: auth_key_manager.dart  credential_transport.dart  key_manager.dart  mmf.dart  secure_storage.dart
lib/mocks/: mock_qr_scanner_service.dart  mock_spruce_services.dart
lib/model/: container_policies.dart  container_policies.freezed.dart  container_policies.g.dart  pi_server_response.dart  pi_server_response.freezed.dart  processor_result.dart  processor_result.freezed.dart  promotional_credential.dart  push_request.dart  token_container.freezed.dart  token_container.g.dart  token_folder.dart  token_folder.g.dart  token_template.dart  token_template.freezed.dart  token_template.g.dart  version.dart
lib/models/: card_data.dart  credential.dart  credential_group.dart  credentials.dart  document_verification_config.dart  liveness_challenge.dart  liveness_gesture_detector.dart  marty_challenge.dart  mdoc_credential.dart  selectable_credential.dart  verifiable_credential.dart
lib/proto/: GoogleAuthenticatorImport.proto
lib/providers/: card_data_provider.dart  card_state_provider.dart  verification_state_provider.dart
lib/repo/: marty_pending_challenge_repository.dart  marty_secure_storage.dart  preference_settings_repository.dart  secure_push_request_repository.dart  secure_storage.dart  secure_token_container_repository.dart  secure_token_repository.dart
lib/repositories/: credential_repository.dart  marty_credential_repository.dart
lib/rust/: biometrics_bridge.dart  marty_bridge_stub.dart  rust_bridge.dart
lib/services/: background_sync_service.dart  credential_verification_service.dart  (+22 more)
macos/: Podfile
rust/: Cargo.toml
rust/src/: api.rs  biometrics.rs  credential.rs  error.rs  frb_generated.rs  lib.rs  trust.rs  zk.rs
scripts/: README.md  create_arb_files.sh  fetch_live_presentation_qr.js  fetch_live_qr.js  inspect_woodgrove_with_playwright.js  plugin-dev.sh  run-web-test.sh  serve-web-test.sh  setup-precommit.sh  test_spruceid_integration.dart  test_spruceid_integration.sh
test/: marty-authenticator.code-workspace  tests_app_wrapper.dart  tests_app_wrapper.mocks.dart  widget_test.dart
web/: index.html  manifest.json  marty_wasm_loader.js
(+534 files in other folders)
