[project]
name = "privacyidea-authenticator"
description = "Privacy-focused authenticator app with privacyIDEA integration"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.0",
    "ruff>=0.1.0",
    "bandit[toml]>=1.7.5",
    "mypy>=1.5.0",
    "isort>=5.12.0",
]

[tool.ruff]
# Target Python 3.8+ (adjust based on your minimum Python version)
target-version = "py38"
line-length = 88
indent-width = 4
extend-exclude = [
    ".git",
    ".ruff_cache",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
    "ENV",
    "env",
]

[tool.ruff.lint]
# Enable comprehensive rule categories
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
    "N",   # pep8-naming
    "PL",  # Pylint
    "RUF", # Ruff-specific rules
    "S",   # bandit security checks
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate (commented-out code)
    "PIE", # flake8-pie
]

# Ignore specific rules that might be too strict for your use case
ignore = [
    "E501",    # Line too long (handled by formatter)
    "B008",    # Do not perform function calls in argument defaults
    "PLR0913", # Too many arguments to function call
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "S101",    # Use of assert (common in tests)
    "S603",    # subprocess call without shell=True
    "S607",    # Starting a process with a partial executable path
]

# Allow autofix for all enabled rules (when `--fix`) is provided
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces, rather than tabs
indent-style = "space"
# Respect magic trailing commas
skip-magic-trailing-comma = false
# Automatically detect line ending
line-ending = "auto"

[tool.ruff.lint.isort]
# Import organization
known-first-party = ["privacyidea_authenticator"]
known-third-party = []
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.pep8-naming]
# Allow Pep 8 naming convention exceptions for specific cases
classmethod-decorators = ["classmethod"]

[tool.ruff.lint.pylint]
# Maximum number of arguments for function/method
max-args = 8
# Maximum number of statements in function/method body
max-statements = 60

# isort configuration (standalone)
[tool.isort]
profile = "ruff"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["privacyidea_authenticator"]
skip_glob = ["*.g.dart", "*.freezed.dart", "*.pb.dart"]

# Bandit configuration
[tool.bandit]
exclude_dirs = ["tests", "test", ".venv", "venv", "build", "dist"]
skips = ["B101", "B601"]  # Skip assert and shell injection for subprocess
severity = "medium"

[tool.bandit.assert_used]
skips = ["**/test_*.py", "**/tests.py"]

# MyPy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
show_error_codes = true
exclude = [
    "build/",
    "dist/",
    ".venv/",
    "venv/",
]

# Vulture configuration (dead code detection)
[tool.vulture]
min_confidence = 80
paths = ["."]
exclude = ["tests/", "test/", ".venv/", "venv/", "build/", "dist/"]
ignore_decorators = ["@app.route", "@click.command", "@pytest.fixture"]
ignore_names = ["_*", "test_*", "*_test"]

# Pydocstyle configuration
[tool.pydocstyle]
convention = "google"
add-ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in __init__
]
match-dir = "(?!tests).*"

# Xenon configuration (code complexity)
[tool.xenon]
max-absolute = "B"
max-modules = "B"
max-average = "A"
exclude = ["tests/", "test/", ".venv/", "venv/"]

# Coverage configuration
[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "test/*",
    "**/test_*.py",
    "**/*_test.py",
    ".venv/*",
    "venv/*",
    "build/*",
    "dist/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
