[package]
name = "marty-authenticator-bridge"
version = "0.1.0"
edition = "2021"
description = "Flutter bridge to marty-verification for credential operations"
license = "AGPL-3.0-only"
repository = "https://github.com/ElevenID/marty-authenticator"
rust-version = "1.87"

[lib]
name = "marty_authenticator_bridge"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Core crates from marty-core
marty-crypto = "0.1.0"
marty-verification = { version = "0.1.0", default-features = false, features = ["iaca", "csca"] }
marty-zkp = "0.1.0"

# OID4VCI/VP wallet (holder) — no issuer or verifier features
marty-oid4vci = { version = "0.1.0", default-features = false, features = ["wallet", "jwt_vc_json", "sd_jwt", "mso_mdoc", "zk_mdoc"] }

# Sync for policy caching
marty-sync = "0.1.0"

# Biometric face verification (ONNX-backed for on-device matching)
marty-biometrics = { version = "0.1.0", features = ["native", "onnx"] }

# Flutter Rust Bridge
flutter_rust_bridge = "=2.11.1"

# Serialization for FFI
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"

# SD-JWT parsing
ssi-sd-jwt = "0.3"
ssi-claims = { version = "0.4", default-features = false }

# Async runtime for blocking calls
tokio = { version = "1.0", features = ["rt", "sync"] }

[build-dependencies]
flutter_rust_bridge_codegen = "2.0"
