[package]
name = "ssi-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "ssi_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py38"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
anyhow = "1.0"
base64 = "0.22"
chrono = "0.4"
sha2 = "0.10"
urlencoding = "2.1"
p256 = { version = "0.13", features = ["ecdsa"] }
ed25519-dalek = "2.1"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
